uefi-macros/tests/ui/fail/entry_bad_return_type.rs
#![no_main]

use uefi::prelude::*;

#[entry]
fn main() -> bool {
    false
}
