uefi-macros/tests/ui/fail/entry_bad_return_type.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/entry_bad_return_type.rs:6:1
  |
6 | fn main() -> bool {
  | ^^^^^^^^^^^^^^^^^ expected `Status`, found `bool`
  |
  = note: expected fn pointer `extern "efiapi" fn(Handle, *const c_void) -> Status`
             found fn pointer `extern "efiapi" fn(Handle, *const c_void) -> bool`
